# core

./: .clang-format  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker.sh  pyproject.toml
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
scripts/: vscode-setup.sh
setup/: setup.sh  vscode-setup.sh
src/common/backend/: backend.hpp  mujoco_backend.cpp  mujoco_backend.hpp
src/common/rl/: CMakeLists.txt  package.xml
src/common/rl/config/: defaults.yaml
src/common/rl/core_rl/: __init__.py  __main__.py  env.py  export_onnx.py  robot.py  scene.py  train.py
src/common/rl/core_rl/algorithms/: __init__.py  ppo.py  sac.py
src/common/rl/core_rl/backends/: __init__.py  mjx.py
src/common/rl/core_rl/callbacks/: __init__.py  grav_comp_collector.py  mlflow_logger.py  redis_stream.py  video_recorder.py
src/common/rl/core_rl/modules/: __init__.py  deployable.py  gravity_comp.py  normalizer.py  pd_controller.py
src/common/rl/core_rl/tasks/: __init__.py  ee_tracking.py  joint_tracking.py  reach_object.py
src/parol6/parol6_description/: CMakeLists.txt  package.xml
src/parol6/parol6_description/config/: parol6_gains.yaml  rl_config.yaml
src/parol6/parol6_hardware_interface/: CMakeLists.txt  package.xml  parol6_hardware_interface_plugin.xml
src/parol6/parol6_hardware_interface/include/parol6_hardware_interface/: parol6_backend.hpp  parol6_hardware_interface.hpp
src/parol6/parol6_hardware_interface/src/: parol6_backend.cpp  parol6_hardware_interface.cpp
src/parol6/parol6_launch/: CMakeLists.txt  package.xml
src/parol6/parol6_launch/config/: controllers.yaml  parol6.rviz  reach_scene.yaml  scene.yaml
src/parol6/parol6_launch/launch/: parol6.launch.py
src/parol6/parol6_launch/scripts/: example_trajectory.py  scene_marker_publisher.py
