<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>parol6_hardware_interface</name>
  <version>0.0.0</version>
  <description>ros2_control hardware interface for the PAROL6 desktop robotic arm</description>
  <maintainer email="alessio.rimoldi.work@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>yaml-cpp</depend>

  <build_depend>mujoco_vendor</build_depend>
  <build_depend>libabsl-dev</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
